force-app/main/default/objects/Account/fields/Applicazione__c.field-meta.xml
<CustomField>
    <fullName>Applicazione__c</fullName>
    <label>Applicazione</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Viti e perni imp. Dentali</fullName>
            </value>
            <value>
                <fullName>Viti e perni imp. Medicali</fullName>
            </value>
            <value>
                <fullName>Viti e bulloni (torniti, rullati, stampati)</fullName>
            </value>
            <value>
                <fullName>Valvole motore</fullName>
            </value>
            <value>
                <fullName>Alberi a camme</fullName>
            </value>
            <value>
                <fullName>Alberi a gomito</fullName>
            </value>
            <value>
                <fullName>Alberi di trasmissione</fullName>
            </value>
            <value>
                <fullName>Alberi motori elettrici</fullName>
            </value>
            <value>
                <fullName>Iniettori</fullName>
            </value>
            <value>
                <fullName>Giunti e giunti omocinetici</fullName>
            </value>
            <value>
                <fullName>Candele di accensione</fullName>
            </value>
            <value>
                <fullName>Ammortizzatori</fullName>
            </value>
            <value>
                <fullName>Telefoni cellulari e IPad (incl. componenti e vetro)</fullName>
            </value>
            <value>
                <fullName>Bottiglie di plastica</fullName>
            </value>
            <value>
                <fullName>Valvole pneumatiche/ oleodinamiche</fullName>
            </value>
            <value>
                <fullName>Elementi per fissaggio</fullName>
            </value>
            <value>
                <fullName>Pistoni</fullName>
            </value>
            <value>
                <fullName>Cuscinetti</fullName>
            </value>
            <value>
                <fullName>Molle e Clip</fullName>
            </value>
            <value>
                <fullName>Condensatori</fullName>
            </value>
            <value>
                <fullName>Utensili da taglio</fullName>
            </value>
            <value>
                <fullName>Parti cambio a variazione continua (CVT)</fullName>
            </value>
            <value>
                <fullName>Prodotti da imbutitura</fullName>
            </value>
            <value>
                <fullName>Prodotti di design (bottoni, occhiali, ecc...)</fullName>
            </value>
            <value>
                <fullName>Raccordi elastici</fullName>
            </value>
            <value>
                <fullName>Schede elettriche e circuiti stampati</fullName>
            </value>
            <value>
                <fullName>Motori elettrici</fullName>
            </value>
            <value>
                <fullName>Statori</fullName>
            </value>
            <value>
                <fullName>Rubinetti</fullName>
            </value>
            <value>
                <fullName>Flange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>