force-app/main/default/objects/Account/fields/Banca_d_appoggio__c.field-meta.xml
<CustomField>
    <fullName>Banca_d_appoggio__c</fullName>
    <label>Banca d&apos;appoggio</label>
    <length>80</length>
    <type>Text</type>
</CustomField>