force-app/main/default/objects/Account/fields/CF__c.field-meta.xml
<CustomField>
    <fullName>CF__c</fullName>
    <label>CF</label>
    <length>16</length>
    <type>Text</type>
</CustomField>