force-app/main/default/objects/Account/fields/Chi_fornisce__c.field-meta.xml
<CustomField>
    <fullName>Chi_fornisce__c</fullName>
    <label>supply to - supplied by</label>
    <length>200</length>
    <type>Text</type>
</CustomField>