force-app/main/default/objects/Account/fields/Codice_Cliente_AS400__c.field-meta.xml
<CustomField>
    <fullName>Codice_Cliente_AS400__c</fullName>
    <externalId>true</externalId>
    <label>Codice Cliente AS400</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>