force-app/main/default/objects/Account/fields/Collected_by__c.field-meta.xml
<CustomField>
    <fullName>Collected_by__c</fullName>
    <label>Collected by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>