force-app/main/default/objects/Account/fields/Company_name_in_foreign_language__c.field-meta.xml
<CustomField>
    <fullName>Company_name_in_foreign_language__c</fullName>
    <label>Company name in foreign language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>