force-app/main/default/objects/Account/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competition Hommel</fullName>
            </value>
            <value>
                <fullName>Competition Sylvac</fullName>
            </value>
            <value>
                <fullName>Competition Marposs</fullName>
            </value>
            <value>
                <fullName>Competition Dr. Schneider</fullName>
            </value>
            <value>
                <fullName>Competition Mahr</fullName>
            </value>
            <value>
                <fullName>Competition Keyence</fullName>
            </value>
            <value>
                <fullName>Competition Mitutoyo</fullName>
            </value>
            <value>
                <fullName>Competition FOX</fullName>
            </value>
            <value>
                <fullName>Competition Chotest</fullName>
            </value>
            <value>
                <fullName>Competition Micro-vu</fullName>
            </value>
            <value>
                <fullName>Competition OGP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>