force-app/main/default/objects/Account/fields/Contratto__c.field-meta.xml
<CustomField>
    <fullName>Contratto__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Spuntare se esiste un contratto</inlineHelpText>
    <label>Contratto</label>
    <type>Checkbox</type>
</CustomField>