force-app/main/default/objects/Account/fields/Cosa_produce__c.field-meta.xml
<CustomField>
    <fullName>Cosa_produce__c</fullName>
    <inlineHelpText>Select the application MTL is used for</inlineHelpText>
    <label>Cosa produce</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alberi a camme</fullName>
            </value>
            <value>
                <fullName>Alberi ad ingranaggi</fullName>
            </value>
            <value>
                <fullName>Alberi a gomito</fullName>
            </value>
            <value>
                <fullName>Alberi di trasmisisone</fullName>
            </value>
            <value>
                <fullName>Alberi per motori elettrici</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
            <value>
                <fullName>Ammortizzatori</fullName>
            </value>
            <value>
                <fullName>Armi/ Canne da fucile</fullName>
            </value>
            <value>
                <fullName>Attuatori Lineari(Soffietti, Viti, Guide)</fullName>
            </value>
            <value>
                <fullName>Candele di accensione</fullName>
            </value>
            <value>
                <fullName>Cellulari e Pads (incluso comp. e vetri)</fullName>
            </value>
            <value>
                <fullName>Componenti Orologeria</fullName>
            </value>
            <value>
                <fullName>Condensatori</fullName>
            </value>
            <value>
                <fullName>Connettori</fullName>
            </value>
            <value>
                <fullName>Cuscinetti</fullName>
            </value>
            <value>
                <fullName>Disco rigido(HDD)</fullName>
            </value>
            <value>
                <fullName>Dispositivi di Fissaggio</fullName>
            </value>
            <value>
                <fullName>Flange</fullName>
            </value>
            <value>
                <fullName>Giunti e Giunti Omocinetici</fullName>
            </value>
            <value>
                <fullName>Guarnizioni</fullName>
            </value>
            <value>
                <fullName>Guarnizioni Sagomate</fullName>
            </value>
            <value>
                <fullName>Imbutitura</fullName>
            </value>
            <value>
                <fullName>Impianti dentali, viti e perni</fullName>
            </value>
            <value>
                <fullName>Impianti Medicali, Viti e Perni</fullName>
            </value>
            <value>
                <fullName>Iniettori</fullName>
            </value>
            <value>
                <fullName>Inserti filettati(no Medicale)</fullName>
            </value>
            <value>
                <fullName>Mandrini/ Elettromandrini</fullName>
            </value>
            <value>
                <fullName>Metrologia (costruttore)</fullName>
            </value>
            <value>
                <fullName>Metrologia (Rivenditore)</fullName>
            </value>
            <value>
                <fullName>Molle e Clips</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>