force-app/main/default/objects/Account/fields/Customer_Satisf_Survey_13_14__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisf_Survey_13_14__c</fullName>
    <description>Filled with the result (average) of the customer satisfaction survey</description>
    <label>Customer Satisf. Survey 13-14</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>