force-app/main/default/objects/Account/fields/Customer_Satisf_Survey_15_16__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisf_Survey_15_16__c</fullName>
    <description>Filled with the result (average) of the customer satisfaction survey</description>
    <label>Customer Satisf. Survey 15-16</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>