force-app/main/default/objects/Account/fields/Data_e_ora_Geocom__c.field-meta.xml
<CustomField>
    <fullName>Data_e_ora_Geocom__c</fullName>
    <label>Data e ora Geocom</label>
    <type>TextArea</type>
</CustomField>