force-app/main/default/objects/Account/fields/Data_stipula_del_contratto__c.field-meta.xml
<CustomField>
    <fullName>Data_stipula_del_contratto__c</fullName>
    <description>Data di stipula del contratto dall&apos;ultimo rinnovo</description>
    <inlineHelpText>Data di stipula del contratto dall&apos;ultimo rinnovo</inlineHelpText>
    <label>Data stipula del contratto</label>
    <type>Date</type>
</CustomField>