force-app/main/default/objects/Account/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <description>Machines purchased by this account (Text)</description>
    <label>Equipment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>