force-app/main/default/objects/Account/fields/Esclusiva_Metrios__c.field-meta.xml
<CustomField>
    <fullName>Esclusiva_Metrios__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Spuntare se esiste esclusiva per i prodotti Metrios</description>
    <inlineHelpText>Spuntare se esiste esclusiva per i prodotti Metrios</inlineHelpText>
    <label>Esclusiva Metrios</label>
    <type>Checkbox</type>
</CustomField>