force-app/main/default/objects/Account/fields/Esclusiva_VICIVISION__c.field-meta.xml
<CustomField>
    <fullName>Esclusiva_VICIVISION__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Spuntare se esiste un&apos;esclusiva per i prodotti VICIVISION</description>
    <inlineHelpText>Spuntare se esiste un&apos;esclusiva per i prodotti VICIVISION</inlineHelpText>
    <label>Esclusiva VICIVISION</label>
    <type>Checkbox</type>
</CustomField>