force-app/main/default/objects/Account/fields/Feedback_agenti_post_geocom__c.field-meta.xml
<CustomField>
    <fullName>Feedback_agenti_post_geocom__c</fullName>
    <label>Feedback agenti post-geocom</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>