force-app/main/default/objects/Account/fields/Geographic_Zone__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Zone__c</fullName>
    <label>Origin of the dealer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
                <label>EU</label>
            </value>
            <value>
                <fullName>Rest of Europe</fullName>
            </value>
            <value>
                <fullName>Rest of the world</fullName>
                <default>true</default>
                <label>Rest of the world</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>