force-app/main/default/objects/Account/fields/Historical_competition_customer__c.field-meta.xml
<CustomField>
    <fullName>Historical_competition_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical competition customer</label>
    <type>Checkbox</type>
</CustomField>