force-app/main/default/objects/Account/fields/Import2_Id__c.field-meta.xml
<CustomField>
    <fullName>Import2_Id__c</fullName>
    <description>Id of the record in original system, where it was imported from by Import2.com</description>
    <externalId>true</externalId>
    <label>Import2 Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>