force-app/main/default/objects/Account/fields/Indirizzo_Interno__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo_Interno__c</fullName>
    <label>Indirizzo Interno</label>
    <type>TextArea</type>
</CustomField>