force-app/main/default/objects/Account/fields/Listino__c.field-meta.xml
<CustomField>
    <fullName>Listino__c</fullName>
    <label>Listino</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VV Base</fullName>
            </value>
            <value>
                <fullName>VV Far East</fullName>
            </value>
            <value>
                <fullName>Metrios Base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>