force-app/main/default/objects/Account/fields/Massima_esposizione__c.field-meta.xml
<CustomField>
    <fullName>Massima_esposizione__c</fullName>
    <description>Massimo fido concesso. considera ordini da evadere, evasi ed eventuale scaduto</description>
    <inlineHelpText>Massimo fido concesso. considera ordini da evadere, evasi ed eventuale scaduto</inlineHelpText>
    <label>Massima esposizione</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>