force-app/main/default/objects/Account/fields/MN_ImportErrors__c.field-meta.xml
<CustomField>
    <fullName>MN_ImportErrors__c</fullName>
    <label>MN_ImportErrors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>