force-app/main/default/objects/Account/fields/P_Iva__c.field-meta.xml
<CustomField>
    <fullName>P_Iva__c</fullName>
    <label>P.Iva</label>
    <length>13</length>
    <type>Text</type>
</CustomField>