force-app/main/default/objects/Account/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This customer is a worldwide reference</description>
    <inlineHelpText>This customer is a worldwide reference</inlineHelpText>
    <label>Reference</label>
    <type>Checkbox</type>
</CustomField>