force-app/main/default/objects/Account/fields/Scadenza_contratto__c.field-meta.xml
<CustomField>
    <fullName>Scadenza_contratto__c</fullName>
    <description>Indicare la data di scadenza del contratto anche se con tacito rinnovo</description>
    <inlineHelpText>Indicare la data di scadenza del contratto anche se con tacito rinnovo (nel caso verificheremo i target)</inlineHelpText>
    <label>Scadenza contratto</label>
    <type>Date</type>
</CustomField>