force-app/main/default/objects/Account/fields/Sconto_prodotti_Advanced__c.field-meta.xml
<CustomField>
    <fullName>Sconto_prodotti_Advanced__c</fullName>
    <inlineHelpText>Per prodotti advanced si intendono le versioni X-Stream o Ergon S o MTP
si considera lo sconto cumulato (es 25+10=32.5 es 25+5=28,75 es 30+10+15=46,45)</inlineHelpText>
    <label>Sconto prodotti &quot;Advanced&quot;</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>