force-app/main/default/objects/Account/fields/Sconto_prodotti_Metrios__c.field-meta.xml
<CustomField>
    <fullName>Sconto_prodotti_Metrios__c</fullName>
    <defaultValue>32.50</defaultValue>
    <label>Sconto prodotti &quot;Metrios&quot;</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>