force-app/main/default/objects/Account/fields/Sconto_su_accessori_singoli__c.field-meta.xml
<CustomField>
    <fullName>Sconto_su_accessori_singoli__c</fullName>
    <defaultValue>25</defaultValue>
    <description>Per componenti acquistati separatamente dalla macchina</description>
    <inlineHelpText>Per componenti acquistati separatamente dalla macchina</inlineHelpText>
    <label>Sconto su accessori singoli</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>