force-app/main/default/objects/Account/fields/Sito_aggiornato_con_nostri_prodotti__c.field-meta.xml
<CustomField>
    <fullName>Sito_aggiornato_con_nostri_prodotti__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Solo per rivenditori</description>
    <inlineHelpText>Solo per rivenditori</inlineHelpText>
    <label>Sito aggiornato con nostri prodotti</label>
    <type>Checkbox</type>
</CustomField>