force-app/main/default/objects/Account/fields/Standard_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Standard_Payment_Method__c</fullName>
    <label>Standard Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Geographic_Zone__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Net 100% - Upon order</fullName>
            </value>
            <value>
                <fullName>Net 100% - Before shipment</fullName>
            </value>
            <value>
                <fullName>Net 30% - Upon order - Net 70% before shipment</fullName>
            </value>
            <value>
                <fullName>Net 70% Before shipment - Net 30% at 60 days from invoice date</fullName>
            </value>
            <value>
                <fullName>Net 20% upon order,Net 30% before shipment, Net 50% 60 days from invoice date</fullName>
            </value>
            <value>
                <fullName>Net 50% Before shipment - Net 50% at 60 days</fullName>
            </value>
            <value>
                <fullName>Net 30% Before shipment - Net 70% at 45 days from invoice date</fullName>
            </value>
            <value>
                <fullName>Net 30% Before shipment - Net 70% at 90 days from invoice date</fullName>
            </value>
            <value>
                <fullName>Net 30% Before shipment - Net 70% at 120 days from invoice date</fullName>
            </value>
            <value>
                <fullName>Net 100% - 30 Days</fullName>
            </value>
            <value>
                <fullName>Net 100% - 45 Days</fullName>
            </value>
            <value>
                <fullName>Net 100% - 60 Days from invoice date</fullName>
            </value>
            <value>
                <fullName>Net 100% - 90 Days from invoice date</fullName>
            </value>
            <value>
                <fullName>Net 50% 60 days - Net 50% 120 days</fullName>
            </value>
            <value>
                <fullName>Net 30% at 30 days - Net 30% at 60 days Net 40% at 90 days from invoice date</fullName>
            </value>
            <value>
                <fullName>50% BB a 90 gg dffm + 50% BB a 120gg dffm</fullName>
            </value>
            <value>
                <fullName>50% Riba a 90 gg dffm + 50% Riba a 120gg dffm</fullName>
            </value>
            <value>
                <fullName>30% BB a 30 gg dffm + 40% BB a 60gg dffm + 30% BB a 90gg dffm</fullName>
            </value>
            <value>
                <fullName>30% Riba a 30 gg dffm + 40% Riba a 60gg dffm + 30% Riba a 90gg dffm</fullName>
            </value>
            <value>
                <fullName>30% BB a 60 gg dffm + 40% BB a 90gg dffm + 30% BB a 120gg dffm</fullName>
            </value>
            <value>
                <fullName>30% Riba a 60 gg dffm + 40% Riba a 90gg dffm + 30% Riba a 120gg dffm</fullName>
            </value>
            <value>
                <fullName>20% BB prima della spedizione + 40% BB a 90gg dffm + 40% BB a 120gg dffm</fullName>
            </value>
            <value>
                <fullName>20% BB prima della spedizione + 80% BB a 90gg dffm</fullName>
            </value>
            <value>
                <fullName>20% BB prima della spedizione + 80% BB a 120gg dffm</fullName>
            </value>
            <value>
                <fullName>100% BB a 180 gg dffm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>