force-app/main/default/objects/Account/fields/Swift__c.field-meta.xml
<CustomField>
    <fullName>Swift__c</fullName>
    <label>Swift</label>
    <length>16</length>
    <type>Text</type>
</CustomField>