force-app/main/default/objects/Account/fields/Tipo_di_listino__c.field-meta.xml
<CustomField>
    <fullName>Tipo_di_listino__c</fullName>
    <inlineHelpText>si considera lo sconto cumulato (es 25+10=32.5 - 25+5=28,75 es 30+10+15=46,45)</inlineHelpText>
    <label>Sconto prodotti &quot;Industrial&quot;</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>