force-app/main/default/objects/Account/fields/Tipo_di_resa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_di_resa__c</fullName>
    <label>Tipo di resa</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Geographic_Zone__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ex-Works - Vici&apos;s plant - Santarcangelo di R. (RN) - Italy</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>DAP - Franco destino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>