force-app/main/default/objects/Account/fields/Type_lead__c.field-meta.xml
<CustomField>
    <fullName>Type_lead__c</fullName>
    <label>Type lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Potential customer</fullName>
            </value>
            <value>
                <fullName>Potential dealer</fullName>
            </value>
            <value>
                <fullName>Finder or Rep.</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Not suitable for MTL</fullName>
            </value>
            <value>
                <fullName>Not suitable for Metrios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>