force-app/main/default/objects/Account/fields/Type_Multi__c.field-meta.xml
<CustomField>
    <fullName>Type_Multi__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Customer</fullName>
            </value>
            <value>
                <fullName>End Customer</fullName>
            </value>
            <value>
                <fullName>OEM System Integrator</fullName>
            </value>
            <value>
                <fullName>Key Account customer</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Prospective Dealer</fullName>
            </value>
            <value>
                <fullName>Sub-Dealer</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Not Suitable for MTL</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Not Suitable for MTL/FOV</fullName>
            </value>
            <value>
                <fullName>Not Suitable for FOV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>