force-app/main/default/objects/Account/fields/Volume_di_fatturato__c.field-meta.xml
<CustomField>
    <fullName>Volume_di_fatturato__c</fullName>
    <label>Volume di fatturato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>