force-app/main/default/objects/Account/listViews/Account_Malf.listView-meta.xml
<ListView>
    <fullName>Account_Malf</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>malf</value>
    </filters>
    <label>Account Malf</label>
    <language>en_US</language>
</ListView>