force-app/main/default/objects/Account/listViews/ACCOUNT_VICIVISION_CHINA.listView-meta.xml
<ListView>
    <fullName>ACCOUNT_VICIVISION_CHINA</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
        <value>park</value>
    </filters>
    <label>ACCOUNT VICIVISION CHINA</label>
    <language>en_US</language>
</ListView>