force-app/main/default/objects/Account/listViews/All_German_Acounts.listView-meta.xml
<ListView>
    <fullName>All_German_Acounts</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 7) AND 6</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>gstie</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>blank</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Steffen</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>karl</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>HL</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>DE</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Erick</value>
    </filters>
    <label>All German Acounts</label>
    <language>de</language>
</ListView>