force-app/main/default/objects/Account/listViews/Rivenditori.listView-meta.xml
<ListView>
    <fullName>Rivenditori</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Dealer,Segnalatore</value>
    </filters>
    <label>Rivenditori</label>
    <language>it</language>
</ListView>